Meta data and favicons

--- a/src/template.ejs
+++ b/src/template.ejs
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>React Prime</title>
+    <title>Code D'Azur assignment</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="A starter kit to create comprehensive React apps with Redux and Styled-Components.">
+    <meta name="description" content="Application for Code D'Azur assignment by Ronny Rook">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2f1cff">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
